update: create/listing publishers api & add swagger descriptions for books api
